[package]
name = "bowl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
inquire = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.13"
